tests/files/type_checker_tests/should_fail/016.cmdr
//Should fail when pre incrementing something that isn't a variable
x = ++2;